# combinatorica

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: battle.rs  camera.rs  combinatorics.rs  fleet_editor.rs  input.rs  loading.rs  log.rs  main.rs  main_menu.rs  movement.rs  part_selection.rs  parts.rs  pilot_log.rs  ship.rs  ship_editor.rs  shop.rs  sound.rs  sprites.rs  state.rs
