[package]
name = "combinatorica"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
enum-iterator = "0.8.1"

[dependencies.bevy]
version = "0.8.0"
default-features = false
# These are the remaining default features other than `bevy_audio` and `mp3`
features = [
    "render",
    "bevy_winit",
    "bevy_gilrs",
    "png",
    "hdr",
    "filesystem_watcher",
    "x11"
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.82"

[dependencies.bevy_kira_audio]
version = "0.12.0"
default-features = true
features = [
    "ogg",
]